添加商品管理-查询商品接口

--- a/mall-manager-web/src/main/resources/templates/item-list.html
+++ b/mall-manager-web/src/main/resources/templates/item-list.html
@@ -1,5 +1,5 @@
 <table class="easyui-datagrid" id="itemList" title="商品列表"
-       data-options="singleSelect:false,collapsible:true,pagination:true,url:'/item/pageList',method:'get',pageSize:30,toolbar:toolbar">
+       data-options="singleSelect:false,collapsible:true,pagination:true,url:'/item/getItemList',method:'get',pageSize:30,toolbar:toolbar">
     <thead>
         <tr>
         	<th data-options="field:'ck',checkbox:true"></th>
