--- a/mall-manager-web/src/main/resources/templates/item-edit.html
+++ b/mall-manager-web/src/main/resources/templates/item-edit.html
@@ -75,9 +75,9 @@
 			$.messager.alert('提示','表单还未填写完成!');
 			return ;
 		}
-		$("#itemeEditForm [name=price]").val(eval($("#itemeEditForm [name=priceView]").val()) * 1000);
+		$("#itemeEditForm [name=price]").val(eval($("#itemeEditForm [name=priceView]").val()) * 100);
 		itemEditEditor.sync();
-		
+
 		var paramJson = [];
 		$("#itemeEditForm .params li").each(function(i,e){
 			var trs = $(e).find("tr");
@@ -99,7 +99,7 @@
 		
 		$("#itemeEditForm [name=itemParams]").val(paramJson);
 		
-		$.post("/rest/item/update",$("#itemeEditForm").serialize(), function(data){
+		$.post("item/editItem",$("#itemeEditForm").serialize(), function(data){
 			if(data.status == 200){
 				$.messager.alert('提示','修改商品成功!','info',function(){
 					$("#itemEditWindow").window('close');
