--- a/mall-manager-web/src/main/resources/templates/content-category.html
+++ b/mall-manager-web/src/main/resources/templates/content-category.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 $(function(){
 	$("#contentCategory").tree({
-		url : '/content/category/list',
+		url : '/contentCategory/getTree',
 		animate: true,
 		method : "GET",
 		onContextMenu: function(e,node){
