添加内容分类管理-删除接口 删除商品管理-新增商品菜单，改由查询商品-新增按钮操作

--- a/mall-manager-web/src/main/resources/templates/content-category.html
+++ b/mall-manager-web/src/main/resources/templates/content-category.html
@@ -61,8 +61,15 @@ function menuHandler(item){
 	}else if(item.name === "delete"){
 		$.messager.confirm('确认','确定删除名为 '+node.text+' 的分类吗？',function(r){
 			if(r){
-				$.post("/content/category/delete/",{id:node.id},function(){
-					tree.tree("remove",node.target);
+				$.post("/contentCategory/deleteContentCategory",{id:node.id},function(data){
+				    debugger;
+				    if(data.status == 200){
+                        tree.tree("remove",node.target);
+                    }
+				    if(data.status = 4001){
+                        $.messager.alert('提示',data.msg);
+                    }
+
 				});	
 			}
 		});
